dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wil42
spec:
  selector:
    app: wil42
  ports:
    - port: 80
      targetPort: 80
