dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil42
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: wil42
            port:
              number: 80
